@@ -726,3 +726,52 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	border-radius: 0px;
 	box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.2);
 }
+#es-lightbox {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,.4);
+	text-align: center;
+	z-index: 9000;
+}
+#es-lightbox p {
+	text-align:right; 
+	color: #fff;
+	margin-right: 20px;
+	margin-top: 10px;
+	font-size: 12px;
+	font-weight: bold;
+	cursor: pointer;
+}
+#es-lightbox img {
+	box-shadow:0 0 25px #111;
+	-moz-box-shadow:0 0 25px #111;
+	max-width: 85%;
+	max-height: 85%;
+	border: 3px solid white;
+	border-radius: 15px;
+}
+#es-lightbox-content {
+	position: absolute;
+	left: 0;
+	right: 0;
+}
+.es-nav { display: none; }
+.es-prev, .es-next { 
+	position: absolute;
+	top: 50%;
+	background: #869791;
+	opacity: 0.5;
+	padding: 5px 10px;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 30px;
+}
+.es-prev:hover, .es-next:hover {
+	opacity: 1;
+	text-decoration: none;
+}
+.es-next { right: 14px; }
+.es-prev { left: 14px; }
